--- a/classes/bard.html
+++ b/classes/bard.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-14 Fri 12:26 -->
+<!-- 2023-08-11 Fri 10:23 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Bard</title>
@@ -202,13 +202,13 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgb24443b">1. Level-up</a></li>
+<li><a href="#org79c9719">1. Level-up</a></li>
 </ul>
 </div>
 </div>
 <div class="org-center">
 <p>
-[<a href="../dnd.html#ID-DND">Main Menu</a>] [<a href="classes.html#ID-campaign-classes">Character Selection</a>] [<a href="classes.html#ID-campaign-classes">Classes</a>]
+[ <a href="../dnd.html#ID-7d419730-2064-41f9-80ee-f24ed9b01ac7">Main Menu</a> ] [ <a href="classes.html#ID-69ef1740-156a-4e42-9493-49ec80a4ac26">Classes</a> ]
 </p>
 </div>
 <hr />
@@ -224,8 +224,8 @@ To begin playing a Bard, first choose a subclass: [<a href="subclasses/actor.htm
 <span class="underline">Spell attack bonus</span>: PROF + INT
 <span class="underline">Initial Health</span>: Roll 1d6 and add it to your base HP
 </p>
-<div id="outline-container-orgb24443b" class="outline-2">
-<h2 id="orgb24443b"><span class="section-number-2">1.</span> Level-up</h2>
+<div id="outline-container-org79c9719" class="outline-2">
+<h2 id="org79c9719"><span class="section-number-2">1.</span> Level-up</h2>
 <div class="outline-text-2" id="text-1">
 <ol class="org-ol">
 <li>Gain Life Force Manipulation. At any time, you may use your turn to deal 1d6 decay damage to an enemy or heal an ally for 1d6. This can only be used in combat, but you can use it once after combat to heal if necessary.</li>
@@ -256,7 +256,7 @@ To begin playing a Bard, first choose a subclass: [<a href="subclasses/actor.htm
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-05 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-14 Fri 12:26</p>
+<p class="date">Created: 2023-08-11 Fri 10:23</p>
 </div>
 </body>
 </html>
