--- a/player_introduction.html
+++ b/player_introduction.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-06 Sun 09:54 -->
+<!-- 2023-08-10 Thu 20:07 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Player Introduction</title>
@@ -202,13 +202,13 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org3f0d133">1. Character Setup Steps</a>
+<li><a href="#orgfb4d33b">1. Character Setup Steps</a>
 <ul>
-<li><a href="#orgac9f3a6">1.1. Pick a Race </a></li>
-<li><a href="#org1005a68">1.2. Pick a Class </a></li>
-<li><a href="#orgfa4523b">1.3. Roll dice to determine ability scores</a></li>
-<li><a href="#org65c0853">1.4. Pick your starting gear</a></li>
-<li><a href="#orgf7afc74">1.5. Create a background for your character</a></li>
+<li><a href="#org5a9b29f">1.1. Pick a Race </a></li>
+<li><a href="#org5de3ca4">1.2. Pick a Class </a></li>
+<li><a href="#org743f8f2">1.3. Roll dice to determine ability scores</a></li>
+<li><a href="#org16246ba">1.4. Pick your starting gear</a></li>
+<li><a href="#orgd6bfd33">1.5. Create a background for your character</a></li>
 </ul>
 </li>
 </ul>
@@ -216,7 +216,7 @@
 </div>
 <div class="org-center">
 <p>
-[ <a href="dnd/dnd.org">Main Menu</a> ] [ <a href="character-sheet.pdf">Blank Character Sheet</a> ]
+[ <a href="dnd.html#ID-7d419730-2064-41f9-80ee-f24ed9b01ac7">Main Menu</a> ][ <a href="character-sheet.pdf">Blank Character Sheet</a> ]
 </p>
 </div>
 <hr />
@@ -228,15 +228,15 @@ Hello! This is going to be a lot at first, sorry about that. I&rsquo;ve simplifi
 Please print (or electronically complete) the <b>blank character</b> sheet included here. Be sure to check the <b>reference character</b> sheet if you feel lost, or just reach out to me and I can help out.
 </p>
 
-<div id="outline-container-org3f0d133" class="outline-2">
-<h2 id="org3f0d133"><span class="section-number-2">1.</span> Character Setup Steps</h2>
+<div id="outline-container-orgfb4d33b" class="outline-2">
+<h2 id="orgfb4d33b"><span class="section-number-2">1.</span> Character Setup Steps</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 Complete these five steps and you&rsquo;ll be ready to play your first adventure. Have fun customizing your character, and good luck!
 </p>
 </div>
-<div id="outline-container-orgac9f3a6" class="outline-3">
-<h3 id="orgac9f3a6"><span class="section-number-3">1.1.</span> Pick a <a href="races.html#ID-e6b25898-e7dd-4444-b332-ef9fc3ea59bf">Race</a> <sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">1</a></sup></h3>
+<div id="outline-container-org5a9b29f" class="outline-3">
+<h3 id="org5a9b29f"><span class="section-number-3">1.1.</span> Pick a <a href="races.html#ID-e6b25898-e7dd-4444-b332-ef9fc3ea59bf">Race</a> <sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">1</a></sup></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 Please pick something you&rsquo;d like to role play as in a long running story, not just a character with the best stats. Each class will have a description of their advantages, disadvantages, class abilities, and other details about a given race in the universe.
@@ -247,8 +247,8 @@ Please complete the instructions on the race sheet to select your race and set y
 </p>
 </div>
 </div>
-<div id="outline-container-org1005a68" class="outline-3">
-<h3 id="org1005a68"><span class="section-number-3">1.2.</span> Pick a <a href="classes/classes.html#ID-69ef1740-156a-4e42-9493-49ec80a4ac26">Class</a> <sup><a id="fnr.2" class="footref" href="#fn.2" role="doc-backlink">2</a></sup></h3>
+<div id="outline-container-org5de3ca4" class="outline-3">
+<h3 id="org5de3ca4"><span class="section-number-3">1.2.</span> Pick a <a href="classes/classes.html#ID-69ef1740-156a-4e42-9493-49ec80a4ac26">Class</a> <sup><a id="fnr.2" class="footref" href="#fn.2" role="doc-backlink">2</a></sup></h3>
 <div class="outline-text-3" id="text-1-2">
 <p>
 Similarly, please pick something you&rsquo;d like to role play as in a long running story, not just the easiest class to fight with. There are many other important parts of the game to consider! Each class also has a set of subclasses that can help you specialize your character. All characters will start at level 1 and will gain all level 1 abilities when the character is created.
@@ -259,8 +259,8 @@ Please complete the instructions on the class sheet to select your class and sub
 </p>
 </div>
 </div>
-<div id="outline-container-orgfa4523b" class="outline-3">
-<h3 id="orgfa4523b"><span class="section-number-3">1.3.</span> Roll dice to determine ability scores</h3>
+<div id="outline-container-org743f8f2" class="outline-3">
+<h3 id="org743f8f2"><span class="section-number-3">1.3.</span> Roll dice to determine ability scores</h3>
 <div class="outline-text-3" id="text-1-3">
 <p>
 You&rsquo;d think this would be uncomplicated. Its not. Sorry. Please keep your character sheet handy and follow along to set your ability scores.
@@ -375,8 +375,8 @@ Your speed is 30 to start
 </p>
 </div>
 </div>
-<div id="outline-container-org65c0853" class="outline-3">
-<h3 id="org65c0853"><span class="section-number-3">1.4.</span> Pick your starting gear</h3>
+<div id="outline-container-org16246ba" class="outline-3">
+<h3 id="org16246ba"><span class="section-number-3">1.4.</span> Pick your starting gear</h3>
 <div class="outline-text-3" id="text-1-4">
 <p>
 Select your equipment based on various difficulty levels. Don&rsquo;t worry, this gear will quickly be replaced, but it should get you to level 3 easily. Record these values in their appropriate places on your character sheet.
@@ -598,8 +598,8 @@ Select your equipment based on various difficulty levels. Don&rsquo;t worry, thi
 </table>
 </div>
 </div>
-<div id="outline-container-orgf7afc74" class="outline-3">
-<h3 id="orgf7afc74"><span class="section-number-3">1.5.</span> Create a background for your character</h3>
+<div id="outline-container-orgd6bfd33" class="outline-3">
+<h3 id="orgd6bfd33"><span class="section-number-3">1.5.</span> Create a background for your character</h3>
 <div class="outline-text-3" id="text-1-5">
 <p>
 This part is all up to you. Who do you want to be in this world?
@@ -650,7 +650,7 @@ Glossary: <a href="glossary.html#ID-a3719559-2b06-443a-b75a-96c9aa3f3b26">Charis
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-03 Mon 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-08-06 Sun 09:54</p>
+<p class="date">Created: 2023-08-10 Thu 20:07</p>
 </div>
 </body>
 </html>
