--- a/classes/wizard.html
+++ b/classes/wizard.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-30 Sun 20:24 -->
+<!-- 2023-08-11 Fri 16:34 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Wizard</title>
@@ -202,7 +202,7 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org777c021">1. Level-up guide</a></li>
+<li><a href="#orge42e341">1. Level-up guide</a></li>
 </ul>
 </div>
 </div>
@@ -224,8 +224,8 @@ To begin as a wizard, choose an element to subclass into: [<a href="subclasses/f
 <li><span class="underline">Initial Health</span>: Roll 1d6 and add it to your base HP.</li>
 </ul>
 
-<div id="outline-container-org777c021" class="outline-2">
-<h2 id="org777c021"><span class="section-number-2">1.</span> Level-up guide</h2>
+<div id="outline-container-orge42e341" class="outline-2">
+<h2 id="orge42e341"><span class="section-number-2">1.</span> Level-up guide</h2>
 <div class="outline-text-2" id="text-1">
 <ol class="org-ol">
 <li>Pick one generic spell, one wizard spell, and one elemental spell (consult your subclass page). You begin the game with three level one spell slots (Total: 3 lvl1, 0 lvl2, 0 lvl3, 0 lvl4). All three reset on every long rest. Spell slots are only used up during combat encounters.</li>
@@ -256,7 +256,7 @@ To begin as a wizard, choose an element to subclass into: [<a href="subclasses/f
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-05 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-30 Sun 20:24</p>
+<p class="date">Created: 2023-08-11 Fri 16:34</p>
 </div>
 </body>
 </html>
