--- a/classes/sorcerer.html
+++ b/classes/sorcerer.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-24 Mon 21:29 -->
+<!-- 2023-08-13 Sun 15:12 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sorcerer</title>
@@ -202,18 +202,19 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org99038ee">1. Level-up guide</a></li>
+<li><a href="#org46c022c">1. Proficiencies</a></li>
+<li><a href="#org8aceccf">2. Level-up guide</a></li>
 </ul>
 </div>
 </div>
 <div class="org-center">
 <p>
-[<a href="../dnd.html#ID-DND">Main Menu</a>] [<a href="../player-introduction.html#ID-17a96883-cc40-409c-9fb5-80d5ab0c8379">Player Introduction Sheet</a>] [<a href="classes.html#ID-campaign-classes">Classes</a>]
+[<a href="../dnd.html#ID-7d419730-2064-41f9-80ee-f24ed9b01ac7">Main Menu</a>] [<a href="classes.html#ID-69ef1740-156a-4e42-9493-49ec80a4ac26">Classes</a>]
 </p>
 </div>
 <hr />
 <p>
-Manipulate the world around you in a manner of your choosing. Uses spells primarily, cast using Wisdom.
+Manipulate the world around you in a manner of your choosing with latent powers imbued in the user. Uses spells primarily, cast using Wisdom.
 </p>
 
 <p>
@@ -230,14 +231,17 @@ Spells are cast using
 <li>Gain +1 Crafting</li>
 </ul>
 
-<div id="outline-container-org99038ee" class="outline-2">
-<h2 id="org99038ee"><span class="section-number-2">1.</span> Level-up guide</h2>
-<div class="outline-text-2" id="text-1">
+<div id="outline-container-org46c022c" class="outline-2">
+<h2 id="org46c022c"><span class="section-number-2">1.</span> Proficiencies</h2>
+</div>
+<div id="outline-container-org8aceccf" class="outline-2">
+<h2 id="org8aceccf"><span class="section-number-2">2.</span> Level-up guide</h2>
+<div class="outline-text-2" id="text-2">
 <ol class="org-ol">
 <li>Pick one generic spell, one sorcerer spell, and one sorcery (consult your subclass page). You begin the game with three level one spell slots (Total: 3 lvl1, 0 lvl2, 0 lvl3, 0 lvl4). All three reset on every long rest. Spell slots are only used up during combat encounters.</li>
 <li>Add one generic spell and one sorcerer spell to your spell list. Roll 1d6 and add to your health.</li>
 <li>Add one sorcery and 1d6 health. Add one level one spell slot (Total: 4, 0, 0, 0).</li>
-<li>Gain Recast Recharge and add 1d6 health.</li>
+<li>Gain Recast Recharge. Add 1d6 health.</li>
 <li>You are now able to learn level two spells. Add +1 WIS and +1 of Any, as well as one level two spell slot. (Total: 4, 1, 0, 0).</li>
 <li>Add one generic spell, one sorcerer spell, and 1d6 health.</li>
 <li>Add one sorcery, one level two spell slot, and 1d6 health (Total: 4, 2).</li>
@@ -261,7 +265,7 @@ Spells are cast using
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-15 Sat 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-24 Mon 21:29</p>
+<p class="date">Created: 2023-08-13 Sun 15:12</p>
 </div>
 </body>
 </html>
