--- a/dnd.html
+++ b/dnd.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-30 Sun 19:23 -->
+<!-- 2023-08-13 Sun 11:41 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>DnD Landing Page</title>
@@ -221,6 +221,10 @@ World Overview
 </p>
 
 <p>
+<a href="guides/spell-index.html#ID-b1b752cb-445c-4902-999d-443c83d5113a">Spell Index</a>
+</p>
+
+<p>
 <a href="glossary.html#ID-a3719559-2b06-443a-b75a-96c9aa3f3b26">Glossary</a>
 </p>
 </div>
@@ -229,7 +233,7 @@ World Overview
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-05 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-30 Sun 19:23</p>
+<p class="date">Created: 2023-08-13 Sun 11:41</p>
 </div>
 </body>
 </html>
