--- a/races.html
+++ b/races.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-14 Fri 12:33 -->
+<!-- 2023-08-13 Sun 11:48 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Races</title>
@@ -202,36 +202,36 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org90a0aec">1. Human</a>
+<li><a href="#org6ec53e1">1. Human</a>
 <ul>
-<li><a href="#orgd082188">1.1. Racial traits</a></li>
+<li><a href="#org1b6011a">1.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#orgf754aa6">2. Elf</a>
+<li><a href="#org2c1795a">2. Elf</a>
 <ul>
-<li><a href="#orgd125330">2.1. Racial traits</a></li>
+<li><a href="#orgd3a1a35">2.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#org7eef6d4">3. Orc</a></li>
-<li><a href="#orgc301954">4. Demon</a></li>
-<li><a href="#orgf57d943">5. Hobbit</a>
+<li><a href="#org7f1bce9">3. Orc</a></li>
+<li><a href="#orgf931f62">4. Demon</a></li>
+<li><a href="#orgff6f474">5. Hobbit</a>
 <ul>
-<li><a href="#org8a3bdae">5.1. Racial traits</a></li>
+<li><a href="#org886bd29">5.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#org1893d0a">6. Dwarf</a>
+<li><a href="#org1a70ad5">6. Dwarf</a>
 <ul>
-<li><a href="#org6a13197">6.1. Racial traits</a></li>
+<li><a href="#orga46ade4">6.1. Racial traits</a></li>
 </ul>
 </li>
-<li><a href="#org873dab9">7. Elemental</a></li>
-<li><a href="#org21e66d2">8. Reptilian</a></li>
+<li><a href="#org80e8950">7. Elemental</a></li>
+<li><a href="#org7b33cbe">8. Reptilian</a></li>
 </ul>
 </div>
 </div>
 <div class="org-center">
 <p>
-[<a href="dnd.html#ID-DND">Main Menu</a>] [<a href="player-introduction.html#ID-17a96883-cc40-409c-9fb5-80d5ab0c8379">Player Intro Sheet</a>] [<a href="classes/classes.html#ID-campaign-classes">Classes</a>]
+[<a href="dnd.html#ID-7d419730-2064-41f9-80ee-f24ed9b01ac7">Main Menu</a>] [<a href="player_introduction.html#ID-f1eac65b-54c1-49f8-b117-e7d46f40b82c">Player Introduction</a>] [<a href="classes/classes.html#ID-69ef1740-156a-4e42-9493-49ec80a4ac26">Classes</a>]
 </p>
 </div>
 <hr />
@@ -324,8 +324,8 @@
 </tr>
 </tbody>
 </table>
-<div id="outline-container-org90a0aec" class="outline-2">
-<h2 id="org90a0aec"><span class="section-number-2">1.</span> Human</h2>
+<div id="outline-container-org6ec53e1" class="outline-2">
+<h2 id="org6ec53e1"><span class="section-number-2">1.</span> Human</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 The white bread of WORLD&rsquo;s races. Not particularly good at anything, not incompetent either.
@@ -335,8 +335,8 @@ The white bread of WORLD&rsquo;s races. Not particularly good at anything, not i
 Humans can quickly learn 1 other language, if they meet a good teacher.
 </p>
 </div>
-<div id="outline-container-orgd082188" class="outline-3">
-<h3 id="orgd082188"><span class="section-number-3">1.1.</span> Racial traits</h3>
+<div id="outline-container-org1b6011a" class="outline-3">
+<h3 id="org1b6011a"><span class="section-number-3">1.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li>+1 to any</li>
@@ -345,37 +345,51 @@ Humans can quickly learn 1 other language, if they meet a good teacher.
 </div>
 </div>
 </div>
-<div id="outline-container-orgf754aa6" class="outline-2">
-<h2 id="orgf754aa6"><span class="section-number-2">2.</span> Elf</h2>
+<div id="outline-container-org2c1795a" class="outline-2">
+<h2 id="org2c1795a"><span class="section-number-2">2.</span> Elf</h2>
 <div class="outline-text-2" id="text-2">
 <p>
-Graceful, beautiful, and intensely magical beings attuned to nature and the harmony of WORLD. Elves love nature, magic, art, and all good things in the world.
+Graceful, beautiful, and intensely magical beings attuned to nature and the harmony of WORLD. Elves love nature, magic, art, and all good things in the world. Elves can live to be more than 700 years old, giving them a very broad and measured perspective on troubling events.
 </p>
 
 <p>
 Elves can speak Elvish:
 </p>
 </div>
-<div id="outline-container-orgd125330" class="outline-3">
-<h3 id="orgd125330"><span class="section-number-3">2.1.</span> Racial traits</h3>
+<div id="outline-container-orgd3a1a35" class="outline-3">
+<h3 id="orgd3a1a35"><span class="section-number-3">2.1.</span> Racial traits</h3>
+<div class="outline-text-3" id="text-2-1">
+<ul class="org-ul">
+<li>+2 to dexterity</li>
+<li>Perception proficiency</li>
+<li>Can&rsquo;t be lulled to sleep by magic</li>
+</ul>
 </div>
 </div>
-<div id="outline-container-org7eef6d4" class="outline-2">
-<h2 id="org7eef6d4"><span class="section-number-2">3.</span> Orc</h2>
 </div>
-<div id="outline-container-orgc301954" class="outline-2">
-<h2 id="orgc301954"><span class="section-number-2">4.</span> Demon</h2>
+<div id="outline-container-org7f1bce9" class="outline-2">
+<h2 id="org7f1bce9"><span class="section-number-2">3.</span> Orc</h2>
+<div class="outline-text-2" id="text-3">
+<p>
+Hulking, proud beings that tare
+</p>
 </div>
-<div id="outline-container-orgf57d943" class="outline-2">
-<h2 id="orgf57d943"><span class="section-number-2">5.</span> Hobbit</h2>
+</div>
+<div id="outline-container-orgf931f62" class="outline-2">
+<h2 id="orgf931f62"><span class="section-number-2">4.</span> Demon</h2>
+<div class="outline-text-2" id="text-4">
+</div>
+</div>
+<div id="outline-container-orgff6f474" class="outline-2">
+<h2 id="orgff6f474"><span class="section-number-2">5.</span> Hobbit</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 Nobody quite knows how the hobbit came to be in WORLD. All that is known is that the race has seemly existed on the fringes of society, outlasting kingdoms and empires by avoiding notice and keeping to themselves. They&rsquo;re concerned with basic needs and simple pleasures, but have little patience for complex plans and grand designs.
 </p>
 </div>
 
-<div id="outline-container-org8a3bdae" class="outline-3">
-<h3 id="org8a3bdae"><span class="section-number-3">5.1.</span> Racial traits</h3>
+<div id="outline-container-org886bd29" class="outline-3">
+<h3 id="org886bd29"><span class="section-number-3">5.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li>+1 to charisma</li>
@@ -384,8 +398,8 @@ Nobody quite knows how the hobbit came to be in WORLD. All that is known is that
 </div>
 </div>
 </div>
-<div id="outline-container-org1893d0a" class="outline-2">
-<h2 id="org1893d0a"><span class="section-number-2">6.</span> Dwarf</h2>
+<div id="outline-container-org1a70ad5" class="outline-2">
+<h2 id="org1a70ad5"><span class="section-number-2">6.</span> Dwarf</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 Deep in the roots of WORLD&rsquo;s mountains, dwarven kingdoms have raised great treasures, and waged great wars against goblin kind. These skilled workers have superior skills with their hands and hammers, but aren&rsquo;t seen as particularly bright by the other races of WORLD.
@@ -399,8 +413,8 @@ Accustomed to life underground, dwarves have superior vision in dark and dim con
 Dwarves can speak Dwarvish.
 </p>
 </div>
-<div id="outline-container-org6a13197" class="outline-3">
-<h3 id="org6a13197"><span class="section-number-3">6.1.</span> Racial traits</h3>
+<div id="outline-container-orga46ade4" class="outline-3">
+<h3 id="orga46ade4"><span class="section-number-3">6.1.</span> Racial traits</h3>
 <div class="outline-text-3" id="text-6-1">
 <ul class="org-ul">
 <li>+2 to constitution</li>
@@ -411,11 +425,13 @@ Dwarves can speak Dwarvish.
 </div>
 </div>
 </div>
-<div id="outline-container-org873dab9" class="outline-2">
-<h2 id="org873dab9"><span class="section-number-2">7.</span> Elemental</h2>
+<div id="outline-container-org80e8950" class="outline-2">
+<h2 id="org80e8950"><span class="section-number-2">7.</span> Elemental</h2>
+<div class="outline-text-2" id="text-7">
 </div>
-<div id="outline-container-org21e66d2" class="outline-2">
-<h2 id="org21e66d2"><span class="section-number-2">8.</span> Reptilian</h2>
+</div>
+<div id="outline-container-org7b33cbe" class="outline-2">
+<h2 id="org7b33cbe"><span class="section-number-2">8.</span> Reptilian</h2>
 <div class="outline-text-2" id="text-8">
 <hr />
 </div>
@@ -424,7 +440,7 @@ Dwarves can speak Dwarvish.
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-03 Mon 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-14 Fri 12:33</p>
+<p class="date">Created: 2023-08-13 Sun 11:48</p>
 </div>
 </body>
 </html>
