--- a/classes/subclasses/actor.html
+++ b/classes/subclasses/actor.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-16 Sun 21:18 -->
+<!-- 2023-08-13 Sun 11:45 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Actor</title>
@@ -202,39 +202,39 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org60fa5be">1. Level 1</a></li>
-<li><a href="#org9481df0">2. Level 2</a></li>
-<li><a href="#org7d5849d">3. Level 5</a></li>
-<li><a href="#orgcdb3a5c">4. Level 10</a></li>
-<li><a href="#org202ab57">5. Level 15</a></li>
-<li><a href="#org225067a">6. Level 19</a></li>
+<li><a href="#orgcaa6fc4">1. Level 1</a></li>
+<li><a href="#org8650ae5">2. Level 2</a></li>
+<li><a href="#org4c90020">3. Level 5</a></li>
+<li><a href="#orga9b9a9c">4. Level 10</a></li>
+<li><a href="#org154e4e9">5. Level 15</a></li>
+<li><a href="#org24e28de">6. Level 19</a></li>
 </ul>
 </div>
 </div>
 <div class="org-center">
 <p>
-[<a href="../../dnd.html#ID-DND">Main Menu</a>] [<a href="../classes.html#ID-campaign-classes">Character Selection</a>] [<a href="../classes.html#ID-campaign-classes">Classes</a>] [<a href="../bard.html#ID-8bb9a08a-97c0-4231-a002-ad7dcf83e4d8">Bard</a>]
+[<a href="../../dnd.html#ID-7d419730-2064-41f9-80ee-f24ed9b01ac7">Main Menu</a>] [<a href="../classes.html#ID-69ef1740-156a-4e42-9493-49ec80a4ac26">Classes</a>] [<a href="../bard.html#ID-8bb9a08a-97c0-4231-a002-ad7dcf83e4d8">Bard</a>]
 </p>
 </div>
 <hr />
-<div id="outline-container-org60fa5be" class="outline-2">
-<h2 id="org60fa5be"><span class="section-number-2">1.</span> Level 1</h2>
+<div id="outline-container-orgcaa6fc4" class="outline-2">
+<h2 id="orgcaa6fc4"><span class="section-number-2">1.</span> Level 1</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 You are famous. This makes you somewhat recognizable. NPC attitudes may vary towards you, and many will have a first impression of you. You are more likely to be recognized in more populated parts of the world.
 </p>
 </div>
 </div>
-<div id="outline-container-org9481df0" class="outline-2">
-<h2 id="org9481df0"><span class="section-number-2">2.</span> Level 2</h2>
+<div id="outline-container-org8650ae5" class="outline-2">
+<h2 id="org8650ae5"><span class="section-number-2">2.</span> Level 2</h2>
 <div class="outline-text-2" id="text-2">
 <p>
 Obtain an eternal, irrevocable, and unchangeable cultural side-quest from the Cultural Side-Quest Generator. Completion of the side-quest may result in additional awards, and will 1 result in the player being rewarded another cultural side-quest.
 </p>
 </div>
 </div>
-<div id="outline-container-org7d5849d" class="outline-2">
-<h2 id="org7d5849d"><span class="section-number-2">3.</span> Level 5</h2>
+<div id="outline-container-org4c90020" class="outline-2">
+<h2 id="org4c90020"><span class="section-number-2">3.</span> Level 5</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Gain <span class="underline">Attraction</span>: This trait places low Wisdom <sup><a id="fnr.1" class="footref" href="#fn.1" role="doc-backlink">1</a></sup> characters under the spell of your magnificent good looks twice per long rest. This can only effect <b>1 target at a time</b>. While attracted to you, this target is distracted from the actions of the rest of the party for three turns, but it <b>EXTREMELY</b> aware of your actions. They will not attack you unless put in extreme circumstances <sup><a id="fnr.2" class="footref" href="#fn.2" role="doc-backlink">2</a></sup>.
@@ -245,8 +245,8 @@ Gain <span class="underline">Perfect Memory</span>: Anything the DM has said to 
 </p>
 </div>
 </div>
-<div id="outline-container-orgcdb3a5c" class="outline-2">
-<h2 id="orgcdb3a5c"><span class="section-number-2">4.</span> Level 10</h2>
+<div id="outline-container-orga9b9a9c" class="outline-2">
+<h2 id="orga9b9a9c"><span class="section-number-2">4.</span> Level 10</h2>
 <div class="outline-text-2" id="text-4">
 <p>
 Gain <span class="underline">Spectral Manager</span>: The manager will keep you informed of any important cultural and political requests upon request. It may also send you concert invites, and give you a hookup for drugs.
@@ -257,8 +257,8 @@ Gain <span class="underline">Booking Agent</span>: Once per long rest, you many 
 </p>
 </div>
 </div>
-<div id="outline-container-org202ab57" class="outline-2">
-<h2 id="org202ab57"><span class="section-number-2">5.</span> Level 15</h2>
+<div id="outline-container-org154e4e9" class="outline-2">
+<h2 id="org154e4e9"><span class="section-number-2">5.</span> Level 15</h2>
 <div class="outline-text-2" id="text-5">
 <p>
 You can now perform a perfect impersonation of anyone, as long as that person themselves does not observe you. Targets will be convinced you are the other person and treat you as such.
@@ -269,8 +269,8 @@ You gain a <span class="underline">Costume Kit</span>: Within reason, you can ma
 </p>
 </div>
 </div>
-<div id="outline-container-org225067a" class="outline-2">
-<h2 id="org225067a"><span class="section-number-2">6.</span> Level 19</h2>
+<div id="outline-container-org24e28de" class="outline-2">
+<h2 id="org24e28de"><span class="section-number-2">6.</span> Level 19</h2>
 <div class="outline-text-2" id="text-6">
 <p>
 Gain knowledge of the <span class="underline"><b>The Forgotten Act</b></span>: Upon performing the Forgotten Act in its entirety, one of the Old Gods will descend upon you to initiate an end-game level encounter. This will result in significant rewards for the actor, and potentially other players in the party.
@@ -296,7 +296,7 @@ Extreme circumstances are determined at the discretion of the DM
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-12 Wed 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-16 Sun 21:18</p>
+<p class="date">Created: 2023-08-13 Sun 11:45</p>
 </div>
 </body>
 </html>
