--- a/classes/subclasses/chaos_sorcerer.html
+++ b/classes/subclasses/chaos_sorcerer.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-07-24 Mon 21:52 -->
+<!-- 2023-08-13 Sun 15:17 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Chaos Sorcerer</title>
@@ -202,25 +202,25 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgb8d3fe8">1. Level 1 Sorceries</a></li>
-<li><a href="#orgfe8fa42">2. Level 2 Sorceries</a></li>
-<li><a href="#orgc339b48">3. Level 3 Sorceries</a></li>
-<li><a href="#org892b802">4. Level 4</a></li>
+<li><a href="#org492dab8">1. Level 1 Sorceries</a></li>
+<li><a href="#org41dd303">2. Level 2 Sorceries</a></li>
+<li><a href="#org82ca55b">3. Level 3 Sorceries</a></li>
+<li><a href="#org505d98c">4. Level 4</a></li>
 </ul>
 </div>
 </div>
 <div class="org-center">
 <p>
-[<a href="../../dnd.html#ID-DND">Main Menu</a>] [<a href="../../player-introduction.html#ID-17a96883-cc40-409c-9fb5-80d5ab0c8379">Player Introduction Sheet</a>] [<a href="../classes.html#ID-campaign-classes">Classes</a>] [<a href="../sorcerer.html#ID-f2323133-e17d-4cff-86db-415b72e6d42e">Sorcerer</a>]
+[<a href="../../dnd.html#ID-7d419730-2064-41f9-80ee-f24ed9b01ac7">Main Menu</a>] [<a href="../classes.html#ID-69ef1740-156a-4e42-9493-49ec80a4ac26">Classes</a>] [<a href="../sorcerer.html#ID-f2323133-e17d-4cff-86db-415b72e6d42e">Sorcerer</a>]
 </p>
 </div>
 <hr />
 <p>
-Chaos sorcerers play with the future, and is able to frustrate enemies and allies alike by impeding their endeavors. They can grant powerful assistance to the party in times of need, but suffer from random damage debuffs.
+Chaos sorcerers structure the future, and are able to frustrate enemies and allies alike by impeding their endeavors. They can grant powerful assistance to the party in times of need, but suffer from random damage debuffs.
 </p>
 
-<div id="outline-container-orgb8d3fe8" class="outline-2">
-<h2 id="orgb8d3fe8"><span class="section-number-2">1.</span> Level 1 Sorceries</h2>
+<div id="outline-container-org492dab8" class="outline-2">
+<h2 id="org492dab8"><span class="section-number-2">1.</span> Level 1 Sorceries</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><span class="underline"><b>Delayed Gratification</b></span>: Roll to hit two enemies within 20 feet. If successful, next turn both enemies will take 2d6 force damage.</li>
@@ -229,8 +229,8 @@ Chaos sorcerers play with the future, and is able to frustrate enemies and allie
 </ul>
 </div>
 </div>
-<div id="outline-container-orgfe8fa42" class="outline-2">
-<h2 id="orgfe8fa42"><span class="section-number-2">2.</span> Level 2 Sorceries</h2>
+<div id="outline-container-org41dd303" class="outline-2">
+<h2 id="org41dd303"><span class="section-number-2">2.</span> Level 2 Sorceries</h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><span class="underline"><b>Borrowed Luck</b></span>: Grant all allies +3 on rolls next turn. This spell does not apply to you.</li>
@@ -239,23 +239,29 @@ Chaos sorcerers play with the future, and is able to frustrate enemies and allie
 </ul>
 </div>
 </div>
-<div id="outline-container-orgc339b48" class="outline-2">
-<h2 id="orgc339b48"><span class="section-number-2">3.</span> Level 3 Sorceries</h2>
+<div id="outline-container-org82ca55b" class="outline-2">
+<h2 id="org82ca55b"><span class="section-number-2">3.</span> Level 3 Sorceries</h2>
 <div class="outline-text-2" id="text-3">
 <ul class="org-ul">
-<li><span class="underline"><b>Omen</b></span>: Learn what typ eof damage all enemies are vulnerable to. For the rest of combat, all allies attacks that deal force damage deal that type of damage instead. All attacks against enemies deal 50% more damage for two turns.</li>
+<li><span class="underline"><b>Omen</b></span>: Learn what type of damage all enemies are vulnerable to. For the rest of combat, all allies attacks that deal force damage deal that type of damage instead. All attacks against enemies deal 1.25% more damage for two turns.</li>
 <li><span class="underline"><b>Lockout</b></span>: Accelerate the effects of all magical effects two turns. Next turn you are the only person able to use magic. <i>Some magic is not affected by <b>Lockout</b>. Consult with DM.</i></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org892b802" class="outline-2">
-<h2 id="org892b802"><span class="section-number-2">4.</span> Level 4</h2>
+<div id="outline-container-org505d98c" class="outline-2">
+<h2 id="org505d98c"><span class="section-number-2">4.</span> Level 4</h2>
+<div class="outline-text-2" id="text-4">
+<ul class="org-ul">
+<li><span class="underline"><b>Predestination</b></span>: You now have the ability to cause predestination once. You may work with the DM to decide some aspect of the future that you would like to change. Because of the (broken) nature of this power, <b>Intervention</b> is highly limited, but can alter the course of a campaign. <i>You must visit a Temple of Order to regain the power</i>.</li>
+<li><span class="underline">**</span>: Roll to dictate the moves of all enemies for the next turn. You can force them to perform any action available to the character. However, you can only force them to perform actions you are aware of &#x2013; you do not gain complete insight into all enemy abilities. After the turn deal 1d12 damage to all enemies effected by **</li>
+</ul>
+</div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-17 Mon 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-07-24 Mon 21:52</p>
+<p class="date">Created: 2023-08-13 Sun 15:17</p>
 </div>
 </body>
 </html>
