--- a/spell-index.html
+++ b/spell-index.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-13 Sun 15:20 -->
+<!-- 2023-08-17 Thu 17:43 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Spell Index</title>
@@ -202,27 +202,38 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orgd2020d3">1. Cantrips</a>
+<li><a href="#org1979094">1. Cantrips</a>
 <ul>
-<li><a href="#orgfdff1d3">1.1. Druid Cantrips</a></li>
+<li><a href="#orgb794d26">1.1. Druid Cantrips</a></li>
 </ul>
 </li>
-<li><a href="#org39db7b1">2. Spells</a>
+<li><a href="#org7b91e8a">2. Spells</a>
 <ul>
-<li><a href="#orge872970">2.1. Wizard Spells</a></li>
-<li><a href="#org9fed5c1">2.2. Sorcerer Spells</a></li>
+<li><a href="#org60b31d3">2.1. Wizard Spells</a></li>
+<li><a href="#orgcfed172">2.2. Sorcerer Spells</a>
+<ul>
+<li><a href="#org60524ec">2.2.1. Chaos Sorcerer</a></li>
+<li><a href="#orgf990f79">2.2.2. Order Sorcerer</a></li>
+<li><a href="#org1e24d84">2.2.3. Psychic Sorcerer</a></li>
+</ul>
+</li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
-
-<div id="outline-container-orgd2020d3" class="outline-2">
-<h2 id="orgd2020d3"><span class="section-number-2">1.</span> Cantrips</h2>
+<div class="org-center">
+<p>
+[<a href="dnd.html#ID-7d419730-2064-41f9-80ee-f24ed9b01ac7">Main Menu</a>]
+</p>
+</div>
+<hr />
+<div id="outline-container-org1979094" class="outline-2">
+<h2 id="org1979094"><span class="section-number-2">1.</span> Cantrips</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orgfdff1d3" class="outline-3">
-<h3 id="orgfdff1d3"><span class="section-number-3">1.1.</span> Druid Cantrips</h3>
+<div id="outline-container-orgb794d26" class="outline-3">
+<h3 id="orgb794d26"><span class="section-number-3">1.1.</span> Druid Cantrips</h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><span class="underline"><b>Befriend</b></span>: Roll a charisma check. On 14 or higher, turn any non-intelligent creature you are on neutral terms with into an ally. This effect lasts for twenty minutes, after which the creature will enter a state of confusion with a 50% potential to lash out at the party.</li>
@@ -231,22 +242,71 @@
 </div>
 </div>
 </div>
-<div id="outline-container-org39db7b1" class="outline-2">
-<h2 id="org39db7b1"><span class="section-number-2">2.</span> Spells</h2>
+<div id="outline-container-org7b91e8a" class="outline-2">
+<h2 id="org7b91e8a"><span class="section-number-2">2.</span> Spells</h2>
 <div class="outline-text-2" id="text-2">
 </div>
-<div id="outline-container-orge872970" class="outline-3">
-<h3 id="orge872970"><span class="section-number-3">2.1.</span> Wizard Spells</h3>
+<div id="outline-container-org60b31d3" class="outline-3">
+<h3 id="org60b31d3"><span class="section-number-3">2.1.</span> Wizard Spells</h3>
 </div>
-<div id="outline-container-org9fed5c1" class="outline-3">
-<h3 id="org9fed5c1"><span class="section-number-3">2.2.</span> Sorcerer Spells</h3>
+<div id="outline-container-orgcfed172" class="outline-3">
+<h3 id="orgcfed172"><span class="section-number-3">2.2.</span> Sorcerer Spells</h3>
+<div class="outline-text-3" id="text-2-2">
+</div>
+<div id="outline-container-org60524ec" class="outline-4">
+<h4 id="org60524ec"><span class="section-number-4">2.2.1.</span> Chaos Sorcerer</h4>
+</div>
+<div id="outline-container-orgf990f79" class="outline-4">
+<h4 id="orgf990f79"><span class="section-number-4">2.2.2.</span> Order Sorcerer</h4>
+</div>
+<div id="outline-container-org1e24d84" class="outline-4">
+<h4 id="org1e24d84"><span class="section-number-4">2.2.3.</span> Psychic Sorcerer</h4>
+<div class="outline-text-4" id="text-2-2-3">
+</div>
+<ol class="org-ol">
+<li><a id="org3a2a73c"></a>Level 1<br />
+<div class="outline-text-5" id="text-2-2-3-1">
+<ul class="org-ul">
+<li><span class="underline"><b>Migraine</b></span>: Roll to hit. On hit, give a target a headache for three turns. Deal 1d8 madness damage on the first turn, 1d6 psychic damage, and 1d4 psychic damage.</li>
+<li><span class="underline"><b>Cursed Knowledge</b></span>: Allow a party member to glimpse the insanity. Give this member +4 insight for the whole turn.</li>
+<li><span class="underline"><b>Discordant Whisper</b></span>: You whisper a discordant melody that only one creature of your choice within range can hear, wracking it with terrible pain. The target must make a Wisdom saving throw. On a failed save, it takes 3d6 psychic damage and must immediately use its reaction, if available, to move as far as its speed allows away from you. The creature doesn’t move into obviously dangerous ground, such as a fire or a pit. On a successful save, the target takes half as much damage and doesn’t have to move away. A deafened creature automatically succeeds on the save.</li>
+</ul>
+</div>
+</li>
+<li><a id="org503724d"></a>Level 2 (5+)<br />
+<div class="outline-text-5" id="text-2-2-3-2">
+<ul class="org-ul">
+<li><span class="underline"><b>Jedi Mind Trick</b></span>: You know the rules. This automatically succeeds on every creature with less than 13 INT. Creatures at or above 13 INT must roll a INT saving throw. <i>The extent of this ability is up to DM discretion</i></li>
+<li><span class="underline"><b>Bad Memory</b></span>: Force a target to make a WIS saving throw. On fail, they take 1d8 madness damage and attempt to run away and cry. If they cannot run away (due to stun, root, etc), they take an additional 2d8 madness damage</li>
+<li><span class="underline"><b>Confuse</b></span>: Force a target to make a WIS saving throw. On fail, their next attack is against a random target in combat and the attack does half damage.</li>
+</ul>
+</div>
+</li>
+<li><a id="org4557b8e"></a>Level 3 (11+)<br />
+<div class="outline-text-5" id="text-2-2-3-3">
+<ul class="org-ul">
+<li><span class="underline"><b>Mind Reader</b></span>: Twice per long rest, discern the exact intentions of a creature as well as one additional fact about them. This ability can be used only when engaged in conversation with the subject.</li>
+<li><span class="underline"><b>Delirium</b></span>: Once per combat, force a target to make a CON saving throw. On failure, the target attacks one member of their party (or themselves if alone), run away, and suffer the effects of madness for a turn.</li>
+</ul>
+</div>
+</li>
+<li><a id="orgba2cebe"></a>Level 4 (15+)<br />
+<div class="outline-text-5" id="text-2-2-3-4">
+<ul class="org-ul">
+<li><span class="underline"><b>Mind Control</b></span>: Force any creature but one of the gods to make a WIS, CON, and INT saving throw. The extent to which you mind control this person depends on how many of the saving throws they succeed on. From then on, the creature will do you bidding (<i>with some DM intervention</i>). Gain one charge every 2 long rests.</li>
+<li><span class="underline"><b>Mass Hallucination</b></span>: Change one facet of history forever. The practical outcome of the event will remain the same, but everyone will remember the event differently. How different will depend on how you&rsquo;d like to change the event.</li>
+</ul>
+</div>
+</li>
+</ol>
+</div>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2023-08-08 Tue 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-08-13 Sun 15:20</p>
+<p class="date">Created: 2023-08-17 Thu 17:43</p>
 </div>
 </body>
 </html>
