--- a/dm-materials/enemies/enemies.html
+++ b/dm-materials/enemies/enemies.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2023-08-11 Fri 10:08 -->
+<!-- 2023-08-17 Thu 17:46 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Enemies</title>
@@ -205,11 +205,19 @@
 <p>
 <a href="goblin-faction.html#ID-a1e62a88-5dac-46fc-9003-6766fb466b06">Goblin Faction</a>
 </p>
+
+<p>
+Elves Faction
+</p>
+
+<p>
+Human Faction
+</p>
 </div>
 <div id="postamble" class="status">
 <p class="date">Date: 2023-07-25 Tue 00:00</p>
 <p class="author">Author: zfoteff</p>
-<p class="date">Created: 2023-08-11 Fri 10:08</p>
+<p class="date">Created: 2023-08-17 Thu 17:46</p>
 </div>
 </body>
 </html>
